--- a/res/layout/averse.xml
+++ b/res/layout/averse.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" >
 
-    <SearchView
-        android:id="@+id/search"
+    <TextView
+        android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="14dp" >
+        android:text="@string/enter_destination"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    </SearchView>
+    <AutoCompleteTextView
+      android:id="@+id/autoComplete"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/text1"
+      android:layout_marginTop="20dp"
+      android:ems="8" />
 
 </RelativeLayout>
