--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,5 +46,12 @@
         android:text="Button"
          />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Start Service" />
+
 </FrameLayout>
 
