--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/layout/list_item.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    
+   	android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
-
+    android:orientation="vertical"
+    tools:context=".PlacesAutocompleteActivity" >
+    
     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
@@ -19,5 +21,7 @@
       android:layout_below="@+id/text1"
       android:layout_marginTop="20dp"
       android:ems="8" />
+    
 
 </RelativeLayout>
+
