shared preference testing

--- a/res/layout/policedetail.xml
+++ b/res/layout/policedetail.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/police_station_theory" />
+    <TableLayout 
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:id="@+id/tab">
+  <TableRow
+      >        
+  </TableRow>    
+</TableLayout>
 
 </LinearLayout>
