--- a/res/layout/activity_addcontacts.xml
+++ b/res/layout/activity_addcontacts.xml
@@ -14,15 +14,15 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center"
-            android:text="Contact Details"
+            android:text="Personnal Details"
             android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="73dp" >
+        android:layout_width="match_parent"
+        android:layout_height="40dp" >
 
         <TextView
             android:id="@+id/textView1"
@@ -37,19 +37,19 @@
         <EditText
             android:id="@+id/editText1"
             android:layout_width="180dp"
-            android:layout_height="36dp"
+            android:layout_height="37dp"
             android:background="#ffffff"
-            android:ems="10" 
-            android:inputType="textPersonName">
+            android:ems="10"
+            android:inputType="textPersonName" >
 
+            <requestFocus />
         </EditText>
+
     </LinearLayout>
 
-   
-
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="73dp" >
+            android:layout_width="wrap_content"
+            android:layout_height="62dp" >
 
             <TextView
                 android:id="@+id/TextView01"
@@ -69,9 +69,10 @@
                 android:ems="10"
                 android:inputType="number" />
         </LinearLayout>
+
         <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="73dp" >
+            android:layout_width="match_parent"
+            android:layout_height="42dp" >
 
         <TextView
             android:id="@+id/textView1"
@@ -99,8 +100,8 @@
         android:layout_height="73dp" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="73dp" >
+            android:layout_width="wrap_content"
+            android:layout_height="57dp" >
 
             <TextView
                 android:id="@+id/TextView01"
