--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -62,5 +62,12 @@
         android:layout_gravity="bottom"
         android:text="Register" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="Geo Fencing" />
+
 </FrameLayout>
 
