--- a/res/layout/loginform.xml
+++ b/res/layout/loginform.xml
@@ -73,14 +73,21 @@
         android:ems="10" >
     </EditText>
 
-    <Button
-        android:id="@+id/button_register"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignRight="@+id/editText_password"
         android:layout_below="@+id/editText_password"
-        android:layout_marginTop="20dp"
-        android:layout_toRightOf="@+id/textView2"
-        android:text="Register" />
+        android:layout_marginRight="16dp" 
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/button_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Register" />
+    </LinearLayout>
 
 </RelativeLayout>
