--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -69,5 +69,13 @@
         android:layout_gravity="end"
         android:text="Geo Fencing" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="400dp"
+        android:text="Averse" />
+
 </FrameLayout>
 
