--- a/res/layout/contacts.xml
+++ b/res/layout/contacts.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="84dp"
         android:layout_marginTop="15dp"
-        android:text="@string/Registration"
+        android:text="User Details"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -22,10 +22,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="24dp"
-        android:text="@string/Username" />
+        android:text="User Name" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/UserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView2"
@@ -39,10 +39,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="24dp"
-        android:text="@string/Passward" />
+        android:text="Password" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/Pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView3"
@@ -57,10 +57,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="22dp"
-        android:text="@string/Contact1" />
+        android:text="Chosen Contact (1)" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/contact1Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText2"
@@ -71,7 +71,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/contact1No"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView6"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="@string/telephone1" />
+        android:text="Mobile No" />
 
     <TextView
         android:id="@+id/textView5"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/editText4"
         android:layout_alignParentLeft="true"
-        android:text="@string/name1" />
+        android:text="Name" />
 
     <TextView
         android:id="@+id/textView7"
@@ -102,7 +102,7 @@
         android:layout_alignRight="@+id/textView3"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="32dp"
-        android:text="@string/Contact2" />
+        android:text="Chosen Contact (2)" />
 
     <TextView
         android:id="@+id/textView8"
@@ -111,10 +111,10 @@
         android:layout_alignRight="@+id/textView4"
         android:layout_below="@+id/textView7"
         android:layout_marginTop="24dp"
-        android:text="@string/name2" />
+        android:text="Name" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/contact2Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView8"
@@ -128,10 +128,10 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView8"
         android:layout_marginTop="18dp"
-        android:text="@string/telephone2" />
+        android:text="Mobile No" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/contact2No"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText5"
@@ -146,6 +146,6 @@
         android:layout_below="@+id/editText6"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
-        android:text="@string/Register" />
+        android:text="Save" />
 
 </RelativeLayout>
