--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -16,7 +16,7 @@
 
     <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/autoComplete"
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/text1"
       android:layout_marginTop="20dp"
