--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -70,11 +70,11 @@
         android:text="Geo Fencing" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/averseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="300dp"
         android:text="Averse" />
 
 </FrameLayout>
