--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -14,6 +14,28 @@
         android:layout_marginTop="16dp"
         android:visibility="gone"
          />
+    
+    <TextView
+        android:id="@+id/policeLan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+         />
+    
+    <TextView
+        android:id="@+id/policeLon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="16dp"
+        android:visibility="gone"
+         />
 
     <TextView
         android:id="@+id/policeName"
