--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -20,6 +20,7 @@
       android:layout_height="wrap_content"
       android:layout_below="@+id/text1"
       android:layout_marginTop="20dp"
+      android:clickable="true"
       
       android:ems="8" />
     
