--- a/res/layout/activity_timer.xml
+++ b/res/layout/activity_timer.xml
@@ -12,7 +12,8 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp" >
-		<EditText
+
+        <EditText
             android:id="@+id/edtHours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
             android:ems="10"
             android:hint="hours"
             android:inputType="phone" />
+
         
         <EditText
             android:id="@+id/edtMinutes"
@@ -29,72 +31,48 @@
             android:ems="10"
             android:hint="minutes"
             android:inputType="phone" />
-        <Button
-            android:id="@+id/btnExtendOK"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:text="OK" 
-            android:visibility="gone"/>
-
-        <Button
-            android:id="@+id/btnStopTime"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:text="Stop Timer"
-            android:visibility="gone" />
-        
-
+         <TextView
+	            android:id="@+id/text"
+	            
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="Time Remaining  "
+	            android:visibility="gone" />
+	        <TextView
+	            android:id="@+id/displayTime"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="00:00:00"
+	            android:visibility="gone" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical" >
-	
-		<LinearLayout
-		    android:id="@+id/layoutRemaining"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:gravity="center"
-	        android:orientation="horizontal"
-	        android:visibility="gone" >
-		    <TextView
-	            android:id="@+id/textRemaining"
-	            style="@style/normalText"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="Time Remaining  " />
-	        <TextView
-	            android:id="@+id/tvTimeCount"
-	            style="@style/normalText"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:text="00:00:00" />
-	     </LinearLayout>
-		 <Button
-	            android:id="@+id/btnExtendTime"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:layout_margin="5dp"
-	            android:layout_weight="2"
-	            android:gravity="center"
-	            android:text="Extend Timer"
-	            android:visibility="gone" />
+        android:orientation="horizontal"
+        android:padding="10dp" >
 
-		 <Button
-		     android:id="@+id/btnStartTime"
-		     android:layout_width="wrap_content"
-		     android:layout_height="wrap_content"
-		     android:layout_margin="5dp"
-		     android:gravity="center"
-		     android:text="Start Timer" />
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text="Start"
+            android:visibility="visible" />
 
-	</LinearLayout>
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text="Stop"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
 </LinearLayout>
