--- a/res/layout/activity_help.xml
+++ b/res/layout/activity_help.xml
@@ -10,7 +10,15 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
+       android:layout_marginLeft="12dp"
+       android:layout_marginRight="12dp"
+       android:layout_marginTop="12dp"
+       android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2"
        android:text="@string/helpDes"
-       android:textAppearance="?android:attr/textAppearanceMedium" />
+       android:textAppearance="?android:attr/textAppearanceMedium"
+       android:textSize="20dp" />
 
 </ScrollView>
