--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -2,17 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="26dp"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
         android:text="@string/change_details"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="24dp" />
 
     <TextView
         android:id="@+id/textView1"
@@ -23,7 +28,11 @@
         android:layout_marginLeft="17dp"
         android:layout_marginTop="29dp"
         android:text="@string/contact_1"
-        android:textSize="20sp" />
+        android:textSize="20dp"
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2" />
 
     <TextView
         android:id="@+id/textView3"
@@ -32,7 +41,12 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="25dp"
-        android:text="@string/name3" />
+        android:text="@string/name3"
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2"
+       android:textSize="18dp" />
 
     <EditText
         android:id="@+id/contact1name"
@@ -51,7 +65,12 @@
         android:layout_alignLeft="@+id/textView3"
         android:layout_below="@+id/textView3"
         android:layout_marginTop="25dp"
-        android:text="@string/mobile_no3" />
+        android:text="@string/mobile_no3"
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2"
+       android:textSize="18dp" />
 
     <EditText
         android:id="@+id/contact1no"
@@ -73,7 +92,12 @@
         android:layout_below="@+id/textView4"
         android:layout_marginTop="31dp"
         android:text="@string/contact_2"
-        android:textSize="20sp" />
+        
+         android:textSize="20dp"
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2" />
 
     <TextView
         android:id="@+id/textView6"
@@ -82,7 +106,12 @@
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="18dp"
-        android:text="@string/name4" />
+        android:text="@string/name4" 
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2"
+       android:textSize="18dp"/>
 
     <EditText
         android:id="@+id/contact2name"
@@ -100,24 +129,33 @@
         android:layout_alignLeft="@+id/textView6"
         android:layout_below="@+id/contact2name"
         android:layout_marginTop="24dp"
-        android:text="@string/mobile_no4" />
+        android:text="@string/mobile_no4" 
+        android:shadowColor="#7F000000"
+       android:shadowDx="1"
+       android:shadowDy="1"
+       android:shadowRadius="2"
+       android:textSize="18dp"/>
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView7"
+        android:layout_marginTop="31dp"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:text="@string/Save2"
+        android:textSize="30dp" />
 
     <EditText
         android:id="@+id/contact2no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/contact2name"
-        android:layout_below="@+id/textView6"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textView7"
         android:ems="10"
         android:inputType="phone" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_below="@+id/textView7"
-        android:layout_marginTop="31dp"
-        android:text="@string/Save2" />
 
 </RelativeLayout>
