--- a/res/layout/contacts.xml
+++ b/res/layout/contacts.xml
@@ -14,7 +14,12 @@
         android:layout_marginLeft="89dp"
         android:layout_marginTop="14dp"
         android:text="@string/User_Details"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="24dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -23,7 +28,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="14dp"
-        android:text="@string/User_Name" />
+        android:text="@string/User_Name"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/UserName"
@@ -41,7 +51,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="15dp"
-        android:text="@string/Password" />
+        android:text="@string/Password"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/Pwd"
@@ -63,7 +78,12 @@
         android:layout_below="@+id/textView3"
         android:layout_marginTop="32dp"
         android:text="@string/ChosenContact1"
-        android:textSize="20sp" />
+        android:textSize="20dp" 
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        />
 
     <EditText
         android:id="@+id/contact1Name"
@@ -81,7 +101,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView4"
         android:layout_marginTop="22dp"
-        android:text="@string/Name1" />
+        android:text="@string/Name1" 
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -89,7 +114,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="@string/Mobile_No1" />
+        android:text="@string/Mobile_No1"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/contact1No"
@@ -108,7 +138,12 @@
         android:layout_below="@+id/textView6"
         android:layout_marginTop="40dp"
         android:text="@string/ChosenContact2"
-        android:textSize="20sp" />
+        
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="20dp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -117,7 +152,12 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView7"
         android:layout_marginTop="18dp"
-        android:text="@string/Name2" />
+        android:text="@string/Name2"
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -126,17 +166,26 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView8"
         android:layout_marginTop="18dp"
-        android:text="@string/Mobile_No2" />
+        android:text="@string/Mobile_No2" 
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:textSize="18dp"/>
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/contact2No"
+        android:layout_alignParentLeft="true"
         android:layout_below="@+id/contact2No"
-        android:layout_marginLeft="18dp"
         android:layout_marginTop="18dp"
-        android:text="@string/Save1" />
+        android:shadowColor="#7F000000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
+        android:text="@string/Save1"
+        android:textSize="30dp" />
 
     <EditText
         android:id="@+id/contact2No"
